log
Thu 16 May 2024 07:57:00 PM UTC: 
 tests:  0|5
total_score: 0/70
6ae6922
Thu 16 May 2024 08:03:04 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:32: error: expected ‘)’ before ‘{’ token
   62 |             if(n->sudo[i][j]==0{
      |               ~                ^
      |                                )
sudoku.c:67:9: error: expected expression before ‘}’ token
   67 |         }
      |         ^
Compilation failed
9dfe7a5
Thu 16 May 2024 08:03:36 PM UTC: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
ef95d24
Thu 16 May 2024 08:03:49 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5c565e5
